--- a/section6-pierrot/springsecsection6/src/main/resources/application.properties
+++ b/section6-pierrot/springsecsection6/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=sql6513353
 spring.datasource.password=eFsji2BHFs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.com.eazybytes=debug
+logging.level.org.springframework.security=debug
+
