upgraded SB to 3.0.0 Release and color on the terminal output

--- a/section6-pierrot/springsecsection6/src/main/resources/application.properties
+++ b/section6-pierrot/springsecsection6/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.com.eazybytes=debug
 logging.level.org.springframework.security=debug
 
+spring.output.ansi.enabled=ALWAYS
