--- a/section5-pierrot/springsecsection5-pierrot/src/main/resources/application.properties
+++ b/section5-pierrot/springsecsection5-pierrot/src/main/resources/application.properties
@@ -1,5 +1,20 @@
-spring.datasource.url=jdbc:mysql://springsecurity.cjdg8jrihfh3.us-east-2.rds.amazonaws.com/eazybank
-spring.datasource.username=admin
-spring.datasource.password=MySQLSpringSecurity
+# EazyBytes Settings
+spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net/sql6513353
+spring.datasource.username=sql6513353
+spring.datasource.password=eFsji2BHFs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Pierrot Settings
+#spring.datasource.url=jdbc:mysql://eazybytesspringsecuritydb.co4b7agzqpmj.eu-central-1.rds.amazonaws.com/eazybytesspringsecuritydb
+#spring.datasource.username=admin
+#spring.datasource.password=Galerien3?
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.open-in-view=false
+
+# FOR DATABASE INITIALIZATION PURPOSES
+#spring.sql.init.mode=always
+
+# SECURITY LOGGING
+logging.level.org.springframework.security=debug
