--- a/section5-pierrot/springsecsection5-pierrot/src/main/resources/application.properties
+++ b/section5-pierrot/springsecsection5-pierrot/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.open-in-view=false
 
+# ENABLE TERMINAL COLOR
+spring.output.ansi.enabled=ALWAYS
+
 # FOR DATABASE INITIALIZATION PURPOSES
 #spring.sql.init.mode=always
 
