Sec8_Chap74-Demo of built-in Filters: related code to show the filter chain

--- a/section8-pierrot/springsecsection8-pierrot/src/main/resources/application.properties
+++ b/section8-pierrot/springsecsection8-pierrot/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.com.eazybytes=debug
+
+# SECURITY PROPERTIES
 logging.level.org.springframework.security=debug
+# Not used
+logging.level.org.springframework.security.web.FilterChainProxy=Debug
 
 spring.output.ansi.enabled=ALWAYS
