section9 pierrot optimizations

--- a/section9-pierrot/springsecsection9-pierrot/src/main/resources/application.properties
+++ b/section9-pierrot/springsecsection9-pierrot/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.password=eFsji2BHFs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.output.ansi.enabled=ALWAYS
+
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
