--- a/section9-pierrot/springsecsection9-pierrot/pom.xml
+++ b/section9-pierrot/springsecsection9-pierrot/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.eazybytes</groupId>
-	<artifactId>springsecsection9</artifactId>
+	<artifactId>springsecsection9-pierrot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>springsecsection9-pierrot</name>
 	<description>Demo project for Spring Boot and Spring Security-Sect9</description>
@@ -38,8 +38,8 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
