--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:mysql://springsecurity.cjdg8jrihfh3.us-east-2.rds.amazonaws.com/eazybank
-spring.datasource.username=admin
-spring.datasource.password=MySQLSpringSecurity
+spring.datasource.url=jdbc:mysql://sql6.freemysqlhosting.net/sql6513353
+spring.datasource.username=sql6513353
+spring.datasource.password=eFsji2BHFs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.output.ansi.enabled=ALWAYS
+
+#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
