--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.output.ansi.enabled=ALWAYS
 
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+logging.level.org.springframework.security=DEBUG
