Sec13_Chap119-Setup EazyBytes Res. Server: introduced a converter,fixed one test and POM optimizations

--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.output.ansi.enabled=ALWAYS
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
 logging.level.org.springframework.security=DEBUG
+
+
+# OAUTH2 SETTINGS
+# ISSUER-URI in KeyCloak 19.03
+issuerUri=http://localhost:7080/realms/EazyBytes_Microservices
