--- a/section_13-pierrot/springsecsection_13-pierrot/pom.xml
+++ b/section_13-pierrot/springsecsection_13-pierrot/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.eazybytes</groupId>
-	<artifactId>springsecsection_13</artifactId>
+	<artifactId>springsecsection_13-pierrot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springsecsection_13</name>
+	<name>springsecsection_13-pierrot</name>
 	<description>Demo project for Spring Boot and Spring Security-Sect13</description>
 	<properties>
 		<java.version>17</java.version>
@@ -26,16 +26,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.ldap</groupId>
-			<artifactId>spring-ldap-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-ldap</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.mysql</groupId>
