--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -13,4 +13,5 @@ logging.level.org.springframework.security=DEBUG
 
 # OAUTH2 SETTINGS
 # ISSUER-URI in KeyCloak 19.03
-issuerUri=http://localhost:7080/realms/EazyBytes_Microservices
+#issuerUri=http://localhost:7080/realms/EazyBytes_Microservices
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/EazyBytes_Microservices/protocol/openid-connect/certs
