Sec13_Chap119-Setup EazyBytes Res. Server: modified an extended properties file

--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -4,14 +4,31 @@ spring.datasource.password=eFsji2BHFs
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.output.ansi.enabled=ALWAYS
-
-#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-
-logging.level.org.springframework.security=DEBUG
-
-
 # OAUTH2 SETTINGS
 # ISSUER-URI in KeyCloak 19.03
 #issuerUri=http://localhost:7080/realms/EazyBytes_Microservices
+
+# JWKS-URI in KeyCloak 19.03
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/EazyBytes_Microservices/protocol/openid-connect/certs
+
+# ENABLE COLOR ON CONSOLE OUTPUTS
+spring.output.ansi.enabled=ALWAYS
+
+# LOGGING SECURITY FILTERCHAIN
+#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+# LOGGING SOME SECURITY STUFF
+logging.level.org.springframework.security=DEBUG
+
+# LOGGING SOME OAUTH2 STUFF
+logging.level.org.springframework.security.oauth2=debug
+
+# SHOW BIND VALUES
+# New with Hibernate 6.x
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# SHOW BIND VALUES
+# Prior to Hibernate 6.x
+#logging.level.org.hibernate.type.descriptor=TRACE
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
