Sec13_Chap121-Passing the AccessToken: switched back to Keycloak19.03 for client_credentials grant_type

--- a/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
+++ b/section_13-pierrot/springsecsection_13-pierrot/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.jpa.properties.hibernate.format_sql=true
 #issuerUri=http://localhost:7080/realms/EazyBytes_Microservices
 
 # JWKS-URI in KeyCloak 19.03
-# spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/EazyBytes_Microservices/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/EazyBytes_Microservices/protocol/openid-connect/certs
 
 # JWKS-URI in KeyCloak 20.01
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/pierrot-realm/protocol/openid-connect/certs
+# Client Credentials seems not to work with this version
+#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/pierrot-realm/protocol/openid-connect/certs
 
 # ENABLE COLOR ON CONSOLE OUTPUTS
 spring.output.ansi.enabled=ALWAYS
